welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:7: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
    if (isFacingTrail()==true){
                     ^SlugSnail:13: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
      if (isFacingTrail()==true){
                       ^SlugSnail:18: error: missing arguments for method isFacingTrail in class SlugSnail;
follow this method with `_' if you want to treat it as a partially applied function
        if (isFacingTrail==true){
            ^